data/derived/comb/progs/unify/prog2024.ml.out
Characters 100-125:
  if (diff < 0) then (List.combine ((clone 0 (abs diff)),l1),l2)
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
